@@ -5,7 +5,7 @@ use Apache::src;
 
 my $i = 0;
 
-skip_test if WIN32;
+# skip_test if WIN32;
 
 print "1..6\n";
 
